Fixes and improvements (#35)
* package-lock

* Fix incorrect class

Should be 'sleeping-text', 'bottom-bar' is the entire bar.

* Avoid having the user wait for no reason

If unfollowing the last account, avoid sleeping entirely.

* Re-use percentage bar for unfollowing process

* Clean leftovers from former bookmarklet plan

There was an idea to export this script as a bookmarklet previously.
Some specific adjustments were needed to be made for that. Since it's no
longer the plan, no need for those adjustments.

* Add bottom spacing to avoid bottom-bar covering other elements - resolves #33

See issue mentioned in commit title.

* Build and update readme

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,9 @@ html {
     background-color: #222 !important;
 
     .iu {
+        // Add bottom spacing due to bottom-bar covering other elements.
+        margin-bottom: 10rem;
+
         .overlay {
             background-color: #222;
             color: #fff;
